# YOLO-26-CAM

./: .gitignore  README.md  YOLO_v26_EigenCAM.ipynb  pyproject.toml
src/yolo_26_cam/: __init__.py
src/yolo_cam/: activations_and_gradients.py  base_cam.py  eigen_cam.py
src/yolo_cam/utils/: image.py  model_targets.py  svd_on_activations.py
test/: test_cam_shape.py
