[project]
name = "yolo-26-cam"
version = "0.1.0"
description = "A package to apply EigenCAM (like GradCAM) and generating heatmap from YOLO models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ttach>=0.0.3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
